--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
     <section class="header header-3 overlay-primary parallax">
         <div class="background-image-holder fadeIn"
-             style="transform: translateY(0px); background: url('images/hero2.jpg') 50% 50%;">
-            <img alt="Background image" class="background-image" src="images/hero2.jpg" style="display: none;">
+             style="transform: translateY(0px); background: url('images/antigua.jpg') 50% 50%;">
+            <img alt="Background image" class="background-image" src="images/antigua.jpg" style="display: none;">
         </div>
 
         <div class="container">
@@ -94,8 +94,8 @@
     <a id="accomm" class="in-page-link"></a>
 
     <section class="accom accom-1 overlay parallax">
-        <div class="background-image-holder fadeIn" style="background: url('images/hero7.jpg') 50% 50%;">
-            <img alt="Background image" class="background-image" src="images/hero7.jpg" style="display: none;">
+        <div class="background-image-holder fadeIn" style="background: url('images/santa_ana_inside_2.jpg') 50% 50%;">
+            <img alt="Background image" class="background-image" src="images/santa_ana_inside_2.jpg" style="display: none;">
         </div>
 
         <div class="container">
@@ -123,24 +123,24 @@
                 <li class="flex-active-slide"
                     style="width: 100%; float: left; margin-right: -100%; position: relative; opacity: 1; display: block; z-index: 2;">
                     <div class="background-image-holder fadeIn"
-                         style="background: url('images/hero9.jpg') 50% 50%;">
-                        <img alt="Image" class="background-image" src="images/hero9.jpg" draggable="false"
+                         style="background: url('images/antigua.jpg') 50% 50%;">
+                        <img alt="Image" class="background-image" src="images/antigua.jpg" draggable="false"
                              style="display: none;">
                     </div>
                 </li>
 
                 <li style="width: 100%; float: left; margin-right: -100%; position: relative; opacity: 0; display: block; z-index: 1;">
                     <div class="background-image-holder fadeIn"
-                         style="background: url('images/hero10.jpg') 50% 50%;">
-                        <img alt="Image" class="background-image" src="images/hero10.jpg" draggable="false"
+                         style="background: url('images/santa_ana_inside_1.jpg') 50% 50%;">
+                        <img alt="Image" class="background-image" src="images/santa_ana_inside_1.jpg" draggable="false"
                              style="display: none;">
                     </div>
                 </li>
 
                 <li style="width: 100%; float: left; margin-right: -100%; position: relative; opacity: 0; display: block; z-index: 1;">
                     <div class="background-image-holder fadeIn"
-                         style="background: url('images/hero11.jpg') 50% 50%;">
-                        <img alt="Image" class="background-image" src="images/hero11.jpg" draggable="false"
+                         style="background: url('images/santa_ana_inside_2.jpg') 50% 50%;">
+                        <img alt="Image" class="background-image" src="images/santa_ana_inside_2.jpg" draggable="false"
                              style="display: none;">
                     </div>
                 </li>
@@ -194,8 +194,8 @@
     </section>
 
     <section class="details details-2 overlay parallax">
-        <div class="background-image-holder fadeIn" style="background: url('images/hero1.jpg') 50% 50%;">
-            <img alt="Background image" class="background-image" src="images/hero1.jpg" style="display: none;">
+        <div class="background-image-holder fadeIn" style="background: url('images/antigua.jpg') 50% 50%;">
+            <img alt="Background image" class="background-image" src="images/antigua.jpg" style="display: none;">
         </div>
 
 
