--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <nav class="nav nav-1 transparent light fixed scrolled">
         <a href="index.html" class="logo">
             <span>Javi &amp; Bea</span>
+            <!--<li><a href="index.html#home" class="inner-link" target="default">Home</a></li>-->
         </a>
         <ul class="menu">
             <li><a href="index.html#home" class="inner-link" target="default">Home</a></li>
