--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
     <title>Javi & Bea</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="/images/favicon.ico" rel="icon" type="image/x-icon" />
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all">
     <link href="css/flexslider.min.css" rel="stylesheet" type="text/css" media="all">
     <link href="css/theme.css" rel="stylesheet" type="text/css" media="all">
