more text changes

--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
             <!--<li><a href="index.html#home" class="inner-link" target="default">Home</a></li>-->
         </a>
         <ul class="menu">
-            <li><a href="index.html#home" class="inner-link" target="default">Home</a></li>
-            <li><a href="index.html#wedding" class="inner-link" target="default">wedding</a></li>
+            <li><a href="index.html#wedding" class="inner-link" target="default">boda</a></li>
             <li><a href="index.html#rsvp" class="inner-link" target="default">rsvp</a></li>
         </ul>
         <div class="mobile-toggle">
@@ -48,7 +47,7 @@
             <div class="row">
                 <div class="col-sm-12 text-center">
                     <h1>Javi &amp; Bea</h1>
-                    <h6>Join us August 6th for our wedding.</h6>
+                    <h6>Acompañanos en nuestra boda el 22 de Octubre</h6>
                 </div>
             </div>
         </div>
@@ -97,7 +96,8 @@
 
     <section class="accom accom-1 overlay parallax">
         <div class="background-image-holder fadeIn" style="background: url('images/santa_ana_inside_2.jpg') 50% 50%;">
-            <img alt="Background image" class="background-image" src="images/santa_ana_inside_2.jpg" style="display: none;">
+            <img alt="Background image" class="background-image" src="images/santa_ana_inside_2.jpg"
+                 style="display: none;">
         </div>
 
         <div class="container">
@@ -124,9 +124,9 @@
             <ul class="slides">
                 <li class="flex-active-slide"
                     style="width: 100%; float: left; margin-right: -100%; position: relative; opacity: 1; display: block; z-index: 2;">
-                    <div class="background-image-holder fadeIn"
-                         style="background: url('images/antigua.jpg') 50% 50%;">
-                        <img alt="Image" class="background-image" src="images/antigua.jpg" draggable="false"
+                    <div class="background-image-holder fadeIn">
+                         <!--style="background: url('images/antigua.jpg') 50% 50%;"-->
+                        <img width="700px" alt="Image" class="background-image" src="images/antigua.jpg" draggable="false"
                              style="display: none;">
                     </div>
                 </li>
@@ -135,7 +135,7 @@
                     <div class="background-image-holder fadeIn"
                          style="background: url('images/santa_ana_inside_1.jpg') 50% 50%;">
                         <img alt="Image" class="background-image" src="images/santa_ana_inside_1.jpg" draggable="false"
-                             style="display: none;">
+                             style="display: none;width:700px"">
                     </div>
                 </li>
 
@@ -143,57 +143,57 @@
                     <div class="background-image-holder fadeIn"
                          style="background: url('images/santa_ana_inside_2.jpg') 50% 50%;">
                         <img alt="Image" class="background-image" src="images/santa_ana_inside_2.jpg" draggable="false"
-                             style="display: none;">
+                             style="display: none;width:700px"">
                     </div>
                 </li>
             </ul>
         </div>
     </section>
 
-    <a id="rsvp" class="in-page-link"></a>
+    <!--<a id="rsvp" class="in-page-link"></a>-->
 
-    <section class="rsvp rsvp-1">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-12 text-center">
-                    <h1>Say you'll be there</h1>
-                    <p>
-                        Please let us know if you can make it by<br> July 10th at the latest, preesh!
-                    </p>
-                </div>
-            </div>
+    <!--<section class="rsvp rsvp-1">-->
+    <!--<div class="container">-->
+    <!--<div class="row">-->
+    <!--<div class="col-sm-12 text-center">-->
+    <!--<h1>Say you'll be there</h1>-->
+    <!--<p>-->
+    <!--Please let us know if you can make it by<br> July 10th at the latest, preesh!-->
+    <!--</p>-->
+    <!--</div>-->
+    <!--</div>-->
 
-            <div class="row">
-                <div class="col-sm-12 text-center">
-                    <form class="form-email" original-error="
-									Please fill out all fields
-								">
-                        <div class="form-section">
-                            <input type="text" name="your-name-names" class="validate-required"
-                                   value="Your Name / Names">
-                            <div class="radio-group">
-                                <div class="radio-holder btn checked">
-                                    <span>Can't Wait</span>
-                                    <input type="radio" name="rsvp" value="cant-wait" checked="checked">
-                                </div>
-                                <div class="radio-holder btn">
-                                    <span>Can't Come</span>
-                                    <input type="radio" name="rsvp" value="cant-come">
-                                </div>
-                            </div>
-                        </div>
-                        <input type="submit" value="RSVP">
-                        <div class="form-error">
-                            <span>Please fill out all fields</span>
-                        </div>
-                        <div class="form-success">
-                            <span>Thanks for your RSVP!</span>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </section>
+    <!--<div class="row">-->
+    <!--<div class="col-sm-12 text-center">-->
+    <!--<form class="form-email" original-error="-->
+    <!--Please fill out all fields-->
+    <!--">-->
+    <!--<div class="form-section">-->
+    <!--<input type="text" name="your-name-names" class="validate-required"-->
+    <!--value="Your Name / Names">-->
+    <!--<div class="radio-group">-->
+    <!--<div class="radio-holder btn checked">-->
+    <!--<span>Can't Wait</span>-->
+    <!--<input type="radio" name="rsvp" value="cant-wait" checked="checked">-->
+    <!--</div>-->
+    <!--<div class="radio-holder btn">-->
+    <!--<span>Can't Come</span>-->
+    <!--<input type="radio" name="rsvp" value="cant-come">-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--<input type="submit" value="RSVP">-->
+    <!--<div class="form-error">-->
+    <!--<span>Please fill out all fields</span>-->
+    <!--</div>-->
+    <!--<div class="form-success">-->
+    <!--<span>Thanks for your RSVP!</span>-->
+    <!--</div>-->
+    <!--</form>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--</section>-->
 
     <section class="details details-2 overlay parallax">
         <div class="background-image-holder fadeIn" style="background: url('images/antigua.jpg') 50% 50%;">
@@ -206,7 +206,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 text-center">
-                    <h6>© Copyright 2015 Medium Rare - All Rights Reserved</h6>
+                    <h6>Javier Gamarra & Beatriz Casado</h6>
+                    <h6>Theme by Medium Rare</h6>
                 </div>
             </div>
         </div>
