--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <title>Javi & Bea</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/images/favicon.ico" rel="icon" type="image/x-icon" />
+    <link href="/images/favicon.ico" rel="icon" type="image/x-icon"/>
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all">
     <link href="css/flexslider.min.css" rel="stylesheet" type="text/css" media="all">
     <link href="css/theme.css" rel="stylesheet" type="text/css" media="all">
@@ -47,7 +47,7 @@
             <div class="row">
                 <div class="col-sm-12 text-center">
                     <h1>Javi &amp; Bea</h1>
-                    <h6>Acompañanos en nuestra boda el 22 de Octubre</h6>
+                    <h3>Acompañanos en nuestra boda el 22 de Octubre</h3>
                 </div>
             </div>
         </div>
@@ -59,34 +59,40 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 text-center">
-                    <h2>Ceremony &amp; Reception</h2>
-                    <h6>Join us for our intimate ceremony<br> then get ready to party.</h6>
+                    <h2>Ceremonia &amp; Banquete</h2>
+                    <h6>---</h6>
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-md-4 col-md-offset-2 col-sm-6 text-center feature">
-                    <h6>Ceremony</h6>
-                    <h4>Montrose Vineyard</h4>
+                    <h6>Ceremonia</h6>
+                    <h4>Iglesia de La Antigua</h4>
                     <p>
-                        2:30pm - 3:30pm<br>
-                        65 Chilvers Avenue<br>
-                        Flinders Ranges, Vic
+                        12:30 - 1:30pm<br>
+                        <br>
+
                     </p>
-                    <a href="index.html#rsvp" class="btn inner-link" target="default">RSVP
-                        Here</a>
+                    <p>
+                    <div class="maps-overlay" onClick="style.pointerEvents='none'"></div>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2981.0830228241907!2d-4.725044384620032!3d41.653948187390846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd4712adff454fbd%3A0xde30f87c9091838e!2sIglesia+de+Santa+Mar%C3%ADa+de+la+Antigua!5e0!3m2!1sen!2ses!4v1471185033346"
+                            width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    </p>
                 </div>
 
                 <div class="col-md-4 col-sm-6 text-center feature">
-                    <h6>Reception</h6>
-                    <h4>Flinders Country Club</h4>
+                    <h6>Banquete</h6>
+                    <h4>Hotel Santa Ana</h4>
                     <p>
-                        4:30pm - Late<br>
-                        1021 Greenvale Road<br>
-                        Flinders Ranges, Vic
+                        14:00 - <br>
+                        <br>
+
                     </p>
-                    <a href="index.html#rsvp" class="btn inner-link" target="default">RSVP
-                        Here</a>
+                    <p>
+                    <div class="maps-overlay" onClick="style.pointerEvents='none'"></div>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2982.40777308043!2d-4.764090384620824!3d41.625316589174275!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd476d0237e4bf8f%3A0xb9ea132c96050f13!2sAC+Hotel+Palacio+de+Santa+Ana!5e0!3m2!1sen!2ses!4v1471185090373"
+                            width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    </p>
                 </div>
             </div>
         </div>
@@ -125,8 +131,9 @@
                 <li class="flex-active-slide"
                     style="width: 100%; float: left; margin-right: -100%; position: relative; opacity: 1; display: block; z-index: 2;">
                     <div class="background-image-holder fadeIn">
-                         <!--style="background: url('images/antigua.jpg') 50% 50%;"-->
-                        <img width="700px" alt="Image" class="background-image" src="images/antigua.jpg" draggable="false"
+                        <!--style="background: url('images/antigua.jpg') 50% 50%;"-->
+                        <img width="700px" alt="Image" class="background-image" src="images/antigua.jpg"
+                             draggable="false"
                              style="display: none;">
                     </div>
                 </li>
