--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
             <div class="row">
                 <div class="col-md-4 col-md-offset-2 col-sm-6 text-center feature">
                     <h6>Ceremonia</h6>
-                    <h4>Iglesia de La Antigua</h4>
+                    <h4>Iglesia de la Antigua</h4>
                     <p>
-                        12:30 - 1:30pm<br>
+                        12:30 - 13:30<br>
                         <br>
 
                     </p>
@@ -82,7 +82,7 @@
 
                 <div class="col-md-4 col-sm-6 text-center feature">
                     <h6>Banquete</h6>
-                    <h4>Hotel Santa Ana</h4>
+                    <h4>Hotel Palacio de Santa Ana</h4>
                     <p>
                         14:00 - <br>
                         <br>
@@ -109,55 +109,78 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 text-center">
-                    <h6>Where To Stay?</h6>
-                    <h1>Flinders Country Club</h1>
+                    <h6>¿Dónde alojarnos?</h6>
+                    <h1>Hotel Palacio Santa Ana</h1>
                     <p>
                         Mention our names when making your reservation<br>
                         to receive the group booking discount.
                     </p>
                     <p>
-                        767 Greenvale Road<br>
-                        Flinders Vic 3214
+                        <br>
+
                     </p>
-                    <a href="index.html#" class="btn btn-white">Book Your Stay</a>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="gallery gallery-1">
-        <div class="image-slider">
-            <ul class="slides">
-                <li class="flex-active-slide"
-                    style="width: 100%; float: left; margin-right: -100%; position: relative; opacity: 1; display: block; z-index: 2;">
-                    <div class="background-image-holder fadeIn">
-                        <!--style="background: url('images/antigua.jpg') 50% 50%;"-->
-                        <img width="700px" alt="Image" class="background-image" src="images/antigua.jpg"
-                             draggable="false"
-                             style="display: none;">
-                    </div>
-                </li>
+    <a id="story" class="in-page-link"></a>
 
-                <li style="width: 100%; float: left; margin-right: -100%; position: relative; opacity: 0; display: block; z-index: 1;">
-                    <div class="background-image-holder fadeIn"
-                         style="background: url('images/santa_ana_inside_1.jpg') 50% 50%;">
-                        <img alt="Image" class="background-image" src="images/santa_ana_inside_1.jpg" draggable="false"
-                             style="display: none;width:700px"">
+    <section class="story story-4">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 text-center">
+                    <div class="image-slider">
+                        <ul class="slides">
+                            <li class="flex-active-slide">
+                                <img alt="Image" src="images/antigua_small.jpg">
+                            </li>
+                            <li class="flex-active-slide">
+                                <img alt="Image" src="images/antigua_small.jpg">
+                            </li>
+                            <li class="flex-active-slide">
+                                <img alt="Image" src="images/antigua_small.jpg">
+                            </li>
+                        </ul>
                     </div>
-                </li>
-
-                <li style="width: 100%; float: left; margin-right: -100%; position: relative; opacity: 0; display: block; z-index: 1;">
-                    <div class="background-image-holder fadeIn"
-                         style="background: url('images/santa_ana_inside_2.jpg') 50% 50%;">
-                        <img alt="Image" class="background-image" src="images/santa_ana_inside_2.jpg" draggable="false"
-                             style="display: none;width:700px"">
-                    </div>
-                </li>
-            </ul>
+                </div>
+            </div>
         </div>
     </section>
 
-    <!--<a id="rsvp" class="in-page-link"></a>-->
+    <!--<section class="gallery gallery-1">-->
+    <!--<div class="image-slider">-->
+    <!--<ul class="slides">-->
+    <!--<li class="flex-active-slide"-->
+    <!--style="width: 100%; float: left; margin-right: -100%; position: relative; opacity: 1; display: block; z-index: 2;">-->
+    <!--<div class="background-image-holder fadeIn"-->
+    <!--style="background: url('images/antigua_small.jpg') 50% 50%;">-->
+    <!--<img alt="Image" class="background-image" src="images/antigua_small.jpg"-->
+    <!--draggable="false"-->
+    <!--style="display: none;">-->
+    <!--</div>-->
+    <!--</li>-->
+
+    <!--<li style="width: 100%; float: left; margin-right: -100%; position: relative; opacity: 0; display: block; z-index: 1;">-->
+    <!--<div class="background-image-holder fadeIn"-->
+    <!--style="background: url('images/santa_ana_inside_1.jpg') 50% 50%;">-->
+    <!--<img alt="Image" class="background-image" src="images/santa_ana_inside_1.jpg" draggable="false"-->
+    <!--style="display: none;">-->
+    <!--</div>-->
+    <!--</li>-->
+
+    <!--<li style="width: 100%; float: left; margin-right: -100%; position: relative; opacity: 0; display: block; z-index: 1;">-->
+    <!--<div class="background-image-holder fadeIn"-->
+    <!--style="background: url('images/santa_ana_inside_2.jpg') 50% 50%;">-->
+    <!--<img alt="Image" class="background-image" src="images/santa_ana_inside_2.jpg" draggable="false"-->
+    <!--style="display: none;">-->
+    <!--</div>-->
+    <!--</li>-->
+    <!--</ul>-->
+    <!--</div>-->
+    <!--</section>-->
+
+    <!--<a id=" rsvp" class="in-page-link"></a>-->
 
     <!--<section class="rsvp rsvp-1">-->
     <!--<div class="container">-->
@@ -203,8 +226,10 @@
     <!--</section>-->
 
     <section class="details details-2 overlay parallax">
-        <div class="background-image-holder fadeIn" style="background: url('images/antigua.jpg') 50% 50%;">
-            <img alt="Background image" class="background-image" src="images/antigua.jpg" style="display: none;">
+        <div class="background-image-holder fadeIn"
+             style="background: url('images/antigua.jpg') 50% 50%;">
+            <img alt="Background image" class="background-image" src="images/antigua.jpg"
+                 style="display: none;">
         </div>
 
 
