luis ramiro video

--- a/index.html
+++ b/index.html
@@ -73,11 +73,9 @@
                         <br>
 
                     </p>
-                    <p>
                     <div class="maps-overlay" onClick="style.pointerEvents='none'"></div>
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2981.0830228241907!2d-4.725044384620032!3d41.653948187390846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd4712adff454fbd%3A0xde30f87c9091838e!2sIglesia+de+Santa+Mar%C3%ADa+de+la+Antigua!5e0!3m2!1sen!2ses!4v1471185033346"
                             width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-                    </p>
                 </div>
 
                 <div class="col-md-4 col-sm-6 text-center feature">
@@ -88,11 +86,9 @@
                         <br>
 
                     </p>
-                    <p>
                     <div class="maps-overlay" onClick="style.pointerEvents='none'"></div>
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2982.40777308043!2d-4.764090384620824!3d41.625316589174275!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd476d0237e4bf8f%3A0xb9ea132c96050f13!2sAC+Hotel+Palacio+de+Santa+Ana!5e0!3m2!1sen!2ses!4v1471185090373"
                             width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-                    </p>
                 </div>
             </div>
         </div>
@@ -129,17 +125,17 @@
     <section class="story story-4">
         <div class="container">
             <div class="row">
-                <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 text-center">
+                <div class="col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 text-center">
                     <div class="image-slider">
                         <ul class="slides">
                             <li class="flex-active-slide">
-                                <img alt="Image" src="images/antigua_small.jpg">
+                                <img alt="Image" src="images/antigua.jpg">
                             </li>
                             <li class="flex-active-slide">
-                                <img alt="Image" src="images/antigua_small.jpg">
+                                <img alt="Image" src="images/antigua.jpg">
                             </li>
                             <li class="flex-active-slide">
-                                <img alt="Image" src="images/antigua_small.jpg">
+                                <img alt="Image" src="images/antigua.jpg">
                             </li>
                         </ul>
                     </div>
@@ -224,6 +220,23 @@
     <!--</div>-->
     <!--</div>-->
     <!--</section>-->
+    <a id="video" class="in-page-link"></a>
+
+    <section class="story story-4">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-5 col-md-offset-1 col-sm-6 text-center feature">
+                    <iframe width="100%" height="350" src="https://www.youtube.com/embed/Xnf1lsZE2a8" frameborder="0"
+                            allowfullscreen></iframe>
+                </div>
+                <div class="col-md-5 col-sm-6 text-center feature">
+                    <p>No me voy a quedar en un banco a esperar la llegada de Dios ni mi juicio final, ni a que arda
+                        París ni alguien para dormir es mejor disfrutar solos la soledad</p>
+                </div>
+
+            </div>
+        </div>
+    </section>
 
     <section class="details details-2 overlay parallax">
         <div class="background-image-holder fadeIn"
