--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 
     <section class="header header-3 overlay-primary parallax">
         <div class="background-image-holder fadeIn"
-             style="transform: translateY(0px); background: url('images/antigua_1.jpg') 50% 50%;top: -50%">
-            <img alt="Background image" class="background-image" src="images/antigua_1.jpg" style="display: none;">
+             style="transform: translateY(0px); background: url('images/antigua_header.jpg') 50% 50%;top: -50%">
+            <img alt="Background image" class="background-image" src="images/antigua_header.jpg" style="display: none;">
         </div>
 
         <div class="container">
@@ -67,9 +67,9 @@
             </div>
 
             <div class="row">
-                <div class="col-md-4 col-md-offset-2 col-sm-6 text-center feature">
+                <div class="col-md-5 col-md-offset-1 col-sm-6 text-center feature">
                     <h6>Ceremonia</h6>
-                    <h4>Iglesia de la Antigua</h4>
+                    <h4>Iglesia de Santa María de la Antigua</h4>
                     <p>
                         12:30 - 13:30<br>
                         Calle Arzobispo Gandásegui<br>
@@ -80,9 +80,9 @@
                             width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
                 </div>
 
-                <div class="col-md-4 col-sm-6 text-center feature">
+                <div class="col-md-5 col-sm-6 text-center feature">
                     <h6>Banquete</h6>
-                    <h4>Hotel Palacio de Santa Ana</h4>
+                    <h4>AC Hotel Palacio de Santa Ana</h4>
                     <p>
                         14:00 - <br>
                         Calle Flecha<br>
@@ -102,15 +102,18 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-5 col-md-offset-1 col-sm-6 text-center feature">
-                    <iframe class="vertical-align" width="100%" height="350" src="https://www.youtube.com/embed/Xnf1lsZE2a8" frameborder="0"
+                    <iframe class="vertical-align" width="100%" height="350"
+                            src="https://www.youtube.com/embed/Xnf1lsZE2a8" frameborder="0"
                             allowfullscreen></iframe>
                 </div>
-                <div class="col-md-5 col-sm-6 text-center feature vertical-align">
-                    <p>Crecer</p>
-                    <p>Es aprender a convivir con el miedo a envejecer,</p>
-                    <p>Y sé</p>
-                    <p>Que aunque por fuera todo cambie al final...</p>
-                    <p>Seguiremos siendo eternos... eternos...</p>
+                <div class="col-md-5 col-sm-5 text-center feature">
+                    <div class="vertical-align" style="text-align:left">
+                        <p>Crecer</p>
+                        <p>Es aprender a convivir con el miedo a envejecer,</p>
+                        <p>Y sé</p>
+                        <p>Que aunque por fuera todo cambie al final...</p>
+                        <p>Seguiremos siendo eternos... eternos...</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -138,7 +141,7 @@
 
     <a id="fotos" class="in-page-link"></a>
 
-    <section class="story story-4">
+    <section class="story short-story">
         <div class="container">
             <div class="row">
                 <div class="col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 text-center">
