--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 
     <section class="header header-3 overlay-primary parallax">
         <div class="background-image-holder fadeIn"
-             style="transform: translateY(0px); background: url('images/antigua_header.jpg') 50% 50%;top: -50%">
-            <img alt="Background image" class="background-image" src="images/antigua_header.jpg" style="display: none;">
+             style="transform: translateY(0px); background: url('images/nosotros.jpg') 50% 50%;top: -50%">
+            <img alt="Background image" class="background-image" src="images/nosotros.jpg" style="display: none;">
         </div>
 
         <div class="container">
@@ -61,7 +61,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 text-center">
-                    <h2>Ceremonia &amp; Banquete</h2>
+                    <h2>Celebración</h2>
                     <h6>Te esperamos en la celebración de este día tan especial</h6>
                 </div>
             </div>
@@ -84,80 +84,13 @@
                     <h6>Banquete</h6>
                     <h4>AC Hotel Palacio de Santa Ana</h4>
                     <p>
-                        14:00 - <br>
+                        14:00 - 22:00<br>
                         Calle Flecha<br>
 
                     </p>
                     <div class="maps-overlay" onClick="style.pointerEvents='none'"></div>
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2982.40777308043!2d-4.764090384620824!3d41.625316589174275!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd476d0237e4bf8f%3A0xb9ea132c96050f13!2sAC+Hotel+Palacio+de+Santa+Ana!5e0!3m2!1sen!2ses!4v1471185090373"
                             width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <a id="video" class="in-page-link"></a>
-
-    <section class="story story-4">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-5 col-md-offset-1 col-sm-6 text-center feature">
-                    <iframe class="vertical-align" width="100%" height="350"
-                            src="https://www.youtube.com/embed/Xnf1lsZE2a8" frameborder="0"
-                            allowfullscreen></iframe>
-                </div>
-                <div class="col-md-5 col-sm-5 text-center feature">
-                    <div class="vertical-align" style="text-align:left">
-                        <p>Crecer</p>
-                        <p>Es aprender a convivir con el miedo a envejecer,</p>
-                        <p>Y sé</p>
-                        <p>Que aunque por fuera todo cambie al final...</p>
-                        <p>Seguiremos siendo eternos... eternos...</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <a id="hotel" class="in-page-link"></a>
-
-    <section class="accom accom-1 overlay parallax">
-        <div class="background-image-holder fadeIn" style="background: url('images/santa_ana_inside_2.jpg') 50% 50%;">
-            <img alt="Background image" class="background-image" src="images/santa_ana_inside_2.jpg"
-                 style="display: none;">
-        </div>
-
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-12 text-center">
-                    <h6>¿Dónde alojarnos?</h6>
-                    <h1>Hotel Palacio Santa Ana</h1>
-                    <p>Menciona nuestros nombres y la fecha de la boda<br/> y te ofrecerán un descuento en las
-                        habitaciones</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <a id="fotos" class="in-page-link"></a>
-
-    <section class="story short-story">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 text-center">
-                    <div class="image-slider">
-                        <ul class="slides">
-                            <li class="flex-active-slide">
-                                <img alt="Image" src="images/antigua.jpg">
-                            </li>
-                            <li class="flex-active-slide">
-                                <img alt="Image" src="images/antigua.jpg">
-                            </li>
-                            <li class="flex-active-slide">
-                                <img alt="Image" src="images/antigua.jpg">
-                            </li>
-                        </ul>
-                    </div>
                 </div>
             </div>
         </div>
@@ -171,7 +104,7 @@
                 <div class="col-sm-12 text-center">
                     <h1>Avísanos si vas a poder venir!</h1>
                     <p>
-                        Por favor, avísanos antes del <br>15 de Septiembre, muchas gracias!
+                        Por favor, confirma cuanto antes!
                     </p>
                 </div>
             </div>
@@ -213,10 +146,81 @@
         </div>
     </section>
 
+    <a id="hotel" class="in-page-link"></a>
+
+    <section class="accom accom-1 overlay parallax">
+        <div class="background-image-holder fadeIn" style="background: url('images/hotel_dormitorio.jpg') 50% 50%;">
+            <img alt="Background image" class="background-image" src="images/hotel_dormitorio.jpg"
+                 style="display: none;">
+        </div>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12 text-center">
+                    <h6>¿Dónde alojarnos?</h6>
+                    <h1>Hotel Palacio Santa Ana</h1>
+                    <p>Menciona nuestros nombres y la fecha de la boda<br/> y te ofrecerán un descuento en las
+                        habitaciones</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <a id="video" class="in-page-link"></a>
+
+    <section class="story story-4">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-5 col-md-offset-1 col-sm-6 text-center feature">
+                    <iframe class="vertical-align" width="100%" height="350"
+                            src="https://www.youtube.com/embed/Xnf1lsZE2a8" frameborder="0"
+                            allowfullscreen></iframe>
+                </div>
+                <div class="col-md-5 col-sm-5 text-center feature">
+                    <div class="vertical-align" style="text-align:left">
+                        <p>Crecer</p>
+                        <p>Es aprender a convivir con el miedo a envejecer,</p>
+                        <p>Y sé</p>
+                        <p>Que aunque por fuera todo cambie al final...</p>
+                        <p>Seguiremos siendo eternos... eternos...</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <a id="fotos" class="in-page-link"></a>
+
+    <section class="story short-story">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 text-center">
+                    <div class="image-slider">
+                        <ul class="slides">
+                            <li class="flex-active-slide">
+                                <img alt="Image" src="images/antigua.jpg">
+                            </li>
+                            <li class="flex-active-slide">
+                                <img alt="Image" src="images/invitacion.jpg">
+                            </li>
+                            <li class="flex-active-slide">
+                                <img alt="Image" src="images/recepcion0.jpg">
+                            </li>
+                            <li class="flex-active-slide">
+                                <img alt="Image" src="images/recepcion1.jpg">
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
     <section class="details details-2 overlay parallax">
         <div class="background-image-holder fadeIn"
-             style="background: url('images/antigua.jpg') 50% 50%;">
-            <img alt="Background image" class="background-image" src="images/antigua.jpg"
+             style="background: url('images/antigua_hashtag.jpg') 50% 50%;">
+            <img alt="Background image" class="background-image" src="images/antigua_hashtag.jpg"
                  style="display: none;">
         </div>
         <div class="container">
@@ -245,15 +249,9 @@
 <script src="scripts/jquery.min.js"></script>
 <script src="scripts/smooth-scroll.min.js"></script>
 <script src="scripts/flexslider.min.js"></script>
-<script src="scripts/scripts.js"></script>
 <script src="scripts/bootstrap.min.js"></script>
-<script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
-<script type="text/javascript">
-    (function () {
-        emailjs.init("user_qs6dnswcpcz3BWqWkX5Kk");
-    })();
-</script>
-
+<script src="scripts/email.min.js"></script>
+<script src="scripts/scripts.js"></script>
 
 </body>
 </html>
