reorder and new maps

--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
     <a id="home" class="in-page-link"></a>
 
     <section class="header header-3 overlay-primary parallax">
-        <div class="background-image-holder fadeIn"
-             style="transform: translateY(0px); background: url('images/nosotros.jpg') 50% 50%;top: -50%">
+        <div class="background-image-holder fadeIn background-us">
             <img alt="Background image" class="background-image" src="images/nosotros.jpg" style="display: none;">
         </div>
 
@@ -62,7 +61,7 @@
             <div class="row">
                 <div class="col-sm-12 text-center">
                     <h2>Celebración</h2>
-                    <h6>Te esperamos en la celebración de este día tan especial</h6>
+                    <h6>Te esperamos en este día tan especial</h6>
                 </div>
             </div>
 
@@ -76,8 +75,8 @@
 
                     </p>
                     <div class="maps-overlay" onClick="style.pointerEvents='none'"></div>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2981.0830228241907!2d-4.725044384620032!3d41.653948187390846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd4712adff454fbd%3A0xde30f87c9091838e!2sIglesia+de+Santa+Mar%C3%ADa+de+la+Antigua!5e0!3m2!1sen!2ses!4v1471185033346"
-                            width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1d5aczghuznjeLsivsPSP1P_wXFo" width="100%"
+                            height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
                 </div>
 
                 <div class="col-md-5 col-sm-6 text-center feature">
@@ -89,8 +88,8 @@
 
                     </p>
                     <div class="maps-overlay" onClick="style.pointerEvents='none'"></div>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2982.40777308043!2d-4.764090384620824!3d41.625316589174275!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd476d0237e4bf8f%3A0xb9ea132c96050f13!2sAC+Hotel+Palacio+de+Santa+Ana!5e0!3m2!1sen!2ses!4v1471185090373"
-                            width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    <iframe src="https://www.google.com/maps/d/u/0/embed?mid=14PyAhlRvpZ8T6tfeXwbE9bHFpFY" width="100%"
+                            height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
@@ -166,29 +165,6 @@
         </div>
     </section>
 
-    <a id="video" class="in-page-link"></a>
-
-    <section class="story story-4">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-5 col-md-offset-1 col-sm-6 text-center feature">
-                    <iframe class="vertical-align" width="100%" height="350"
-                            src="https://www.youtube.com/embed/Xnf1lsZE2a8" frameborder="0"
-                            allowfullscreen></iframe>
-                </div>
-                <div class="col-md-5 col-sm-5 text-center feature">
-                    <div class="vertical-align" style="text-align:left">
-                        <p>Crecer</p>
-                        <p>Es aprender a convivir con el miedo a envejecer,</p>
-                        <p>Y sé</p>
-                        <p>Que aunque por fuera todo cambie al final...</p>
-                        <p>Seguiremos siendo eternos... eternos...</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <a id="fotos" class="in-page-link"></a>
 
     <section class="story short-story">
@@ -210,6 +186,29 @@
                                 <img alt="Image" src="images/recepcion1.jpg">
                             </li>
                         </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <a id="video" class="in-page-link"></a>
+
+    <section class="story story-4">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-5 col-md-offset-1 col-sm-6 text-center feature">
+                    <iframe class="vertical-align" width="100%" height="350"
+                            src="https://www.youtube.com/embed/Xnf1lsZE2a8" frameborder="0"
+                            allowfullscreen></iframe>
+                </div>
+                <div class="col-md-5 col-sm-5 text-center feature">
+                    <div class="vertical-align" style="text-align:left">
+                        <p>Crecer</p>
+                        <p>Es aprender a convivir con el miedo a envejecer,</p>
+                        <p>Y sé</p>
+                        <p>Que aunque por fuera todo cambie al final...</p>
+                        <p>Seguiremos siendo eternos... eternos...</p>
                     </div>
                 </div>
             </div>
