--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 <script src="scripts/smooth-scroll.min.js"></script>
 <script src="scripts/flexslider.min.js"></script>
 <script src="scripts/bootstrap.min.js"></script>
-<script src="scripts/email.min.js"></script>
+<script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
 <script src="scripts/scripts.js"></script>
 
 </body>
