fix gallery and reduce font in mobile

--- a/index.html
+++ b/index.html
@@ -176,9 +176,9 @@
                             <li class="flex-active-slide">
                                 <img alt="Image" src="images/antigua.jpg">
                             </li>
-                            <li class="flex-active-slide">
-                                <img alt="Image" src="images/invitacion.jpg">
-                            </li>
+                            <!--<li class="flex-active-slide">-->
+                                <!--<img alt="Image" src="images/invitacion.jpg">-->
+                            <!--</li>-->
                             <li class="flex-active-slide">
                                 <img alt="Image" src="images/recepcion0.jpg">
                             </li>
