add cake picture

--- a/index.html
+++ b/index.html
@@ -185,6 +185,9 @@
                             <li class="flex-active-slide">
                                 <img alt="Image" src="images/recepcion1.jpg">
                             </li>
+                            <li class="flex-active-slide">
+                                <img alt="Image" src="images/cake.jpg">
+                            </li>
                         </ul>
                     </div>
                 </div>
