--- a/index.html
+++ b/index.html
@@ -174,6 +174,9 @@
                     <div class="image-slider">
                         <ul class="slides">
                             <li class="flex-active-slide">
+                                <img alt="Image" src="images/rings.jpg">
+                            </li>
+                            <li class="flex-active-slide">
                                 <img alt="Image" src="images/antigua.jpg">
                             </li>
                             <!--<li class="flex-active-slide">-->
